# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt
public_include/: camera.h  constants.h  geometry.h  material.h  ray.h  scene.h  sphere.h
src/: camera.cpp  main.cpp  ray.cpp  scene.cpp
